Update README to reflect fork changes.

--- a/README.org
+++ b/README.org
@@ -1,11 +1,8 @@
 * Ring CORS
 
-  [[https://clojars.org/ring-cors][https://img.shields.io/clojars/v/ring-cors.svg]]
-  [[https://travis-ci.org/r0man/ring-cors][https://travis-ci.org/r0man/ring-cors.svg]]
-  [[http://jarkeeper.com/r0man/ring-cors][http://jarkeeper.com/r0man/ring-cors/status.svg]]
-  [[http://jarkeeper.com/r0man/ring-cors][https://jarkeeper.com/r0man/ring-cors/downloads.svg]]
+  [[https://clojars.org/rwilson/ring-cors][https://img.shields.io/clojars/v/rwilson/ring-cors.svg]]
 
-  [[https://github.com/ring-clojure][Ring]] middleware for [[https://en.wikipedia.org/wiki/Cross-origin_resource_sharing][Cross-Origin Resource Sharing]].
+  [[https://github.com/ring-clojure][Ring]] middleware for [[https://en.wikipedia.org/wiki/Cross-origin_resource_sharing][Cross-Origin Resource Sharing]]. Forked from r0man/ring-cores to improve disallowed response. 
 
 ** Usage
 
@@ -19,6 +16,6 @@
 
 ** License
 
-   Copyright (C) 2013-2016 r0man
+   Copyright (C) 2013-2016 r0man, with portions copyright (c) 2015-2016 rwilson.
 
    Distributed under the Eclipse Public License, the same as Clojure.
